--- a/Chap4-SourceFoilDesign.tex
+++ b/Chap4-SourceFoilDesign.tex
@@ -10,7 +10,7 @@
 %\end{flushright} 
 
 
-\NI Sensitivity studies of the SuperNEMO experiment have shown that to reach a sensitivity of $\sim$ 10$^{\text{26}}$~y in 500~kg~$\times$~y of exposure with $^{\text{82}}$Se, the radio-purity level of the source foil in $^{\text{208}}$Tl and $^{\text{214}}$Bi must be better than respectively 2~$\mu$Bq/kg and 10~$\mu$Bq/kg~\cite{PhysicsCaseSuperNEMO}. In order to measure these very low contaminations, the collaboration built the BiPo detector as explained in Section~\ref{sec:SourceFoilsSN}. The LAPP team is involved in the fabrication of the half of the source foils for the SuperNEMO demonstrator module and proposed alternative source foil designs to the composite foil adopted in NEMO-3 in order to reach the level of radio-purity. The two main designs explored are a NEMO-3-like foils made of $^{\text{82}}$Se, glue and two mylar backing films, and a design made of $^{\text{82}}$Se, glue and a central nylon mesh. These two different concepts could induce different performences such as the level of background or the sensitivity to the 0$\nu\beta\beta$ half-life. 
+\NI Sensitivity studies of the SuperNEMO experiment have shown that to reach a sensitivity of $\sim$ 10$^{\text{26}}$~y in 500~kg~$\times$~y of exposure with $^{\text{82}}$Se, the radio-purity level of the source foil in $^{\text{208}}$Tl and $^{\text{214}}$Bi must be better than respectively 2~$\mu$Bq/kg and 10~$\mu$Bq/kg~\cite{PhysicsCaseSuperNEMO}. In order to measure these very low contaminations, the collaboration built the BiPo detector as explained in Section~\ref{sec:SourceFoilsSN}. The LAPP team is involved in the fabrication of half of the source foils for the SuperNEMO demonstrator module and proposed alternative source foil designs to the composite foil adopted in NEMO-3 in order to reach the level of radio-purity. The two main designs explored are a NEMO-3-like foils made of $^{\text{82}}$Se, glue and two mylar backing films, and a design made of $^{\text{82}}$Se, glue and a central nylon mesh. These two different concepts could induce different performances such as the level of background or the sensitivity to the 0$\nu\beta\beta$ half-life. 
 
 
 
@@ -44,7 +44,7 @@
 \subsection{Foil geometry}\label{sec:FoilGeometry}
 
 
-\NI As described in Section~\ref{sec:SourceFoilsSN}, the source foil of the SuperNEMO demonstrator module consists of 36~strips 2700~cm long for a total surface of about 14~m$^\text{2}$ which will contain 7~kg of $^{\text{82}}$Se, with a surface density of about~50~mg/cm$^\text{2}$. A drawing of the source foil in shown in Figure~\ref{SuperNEMOFoils}. The total mass of $^{\text{82}}$Se is fixed but the mass of the other materials, especially for the mecanical strenght of the foil, will depend on the source design.
+\NI As described in Section~\ref{sec:SourceFoilsSN}, the source foil of the SuperNEMO demonstrator module consists of 36~strips 2700~cm long for a total surface of about 14~m$^\text{2}$ which will contain 7~kg of $^{\text{82}}$Se, with a surface density of about~50~mg/cm$^\text{2}$. A drawing of the source foil in shown in Figure~\ref{SuperNEMOFoils}. The total mass of $^{\text{82}}$Se is fixed but the mass of the other materials, especially for the mecanical strength of the foil, will depend on the source design.
 
 
 \subsection{Foil composition}\label{sec:FoilComposition}
@@ -56,7 +56,7 @@
 \subsubsection{Selenium}
 
 
-\NI Six natural selenium isotopes exist : $^{\text{74}}$Se, $^{\text{76}}$Se, $^{\text{77}}$Se, $^{\text{78}}$Se, $^{\text{80}}$Se and $^{\text{82}}$Se. Selenium is a nonmetal element discovered in 1817 by the Swedish chemist Jacob Berzelius. All these isotopes are stable, except $^{\text{82}}$Se which decay via double beta decays to $^{\text{82}}$Kr with a very long half-life of 1.0 $\times$~10$^{\text{20}}$~y~\cite{NEMO3:Se82}. Selenium is rarely found under the shape of pure ore and its salts are toxic in large amounts. Selenium can appears red, grey or black depending on the molecular structure of the salt. In its black form, selenium is irregular and complex, and consists of polymeric rings with up to 1000 atoms per ring. 
+\NI Six natural selenium isotopes exist : $^{\text{74}}$Se, $^{\text{76}}$Se, $^{\text{77}}$Se, $^{\text{78}}$Se, $^{\text{80}}$Se and $^{\text{82}}$Se. Selenium is a nonmetal element discovered in 1817 by the Swedish chemist Jacob Berzelius. All these isotopes are stable, except $^{\text{82}}$Se which decay via double beta decays to $^{\text{82}}$Kr with a very long half-life of 1.0 $\times$~10$^{\text{20}}$~y~\cite{NEMO3:Se82}. Selenium is rarely found under the shape of pure ore and its salts are toxic in large amounts. Selenium can appear red, grey or black depending on the molecular structure of the salt. In its black form, selenium is irregular and complex, and consists of polymeric rings with up to 1000 atoms per ring. 
 
 
 \subsubsection{Polyvinyl alcohol}
@@ -80,7 +80,7 @@
 \subsection{Material radiopurity}\label{sec:MaterialRadiopurity}
 
 
-\NI The level of contamination in $^{\text{208}}$Tl and $^{\text{214}}$Bi of the materials under consideration for the foil production have been introduced and measured in BiPo~\cite{BiPoDetector}. The activities in $^{\text{208}}$Tl and $^{\text{214}}$Bi at 90\% C.L. are summarised in Table~\ref{tab:MeasuredBiPoAndDensity}.
+\NI The level of contamination in $^{\text{208}}$Tl and $^{\text{214}}$Bi of the materials under consideration for the foil production have been measured in BiPo~\cite{BiPoDetector}. The activities in $^{\text{208}}$Tl and $^{\text{214}}$Bi at 90\% C.L. are summarised in Table~\ref{tab:MeasuredBiPoAndDensity}.
 
 
 \begin{table}[h!]
@@ -89,8 +89,8 @@
 \toprule
 \multirow{2}{*}{Material} & Density           &  A ($^{\text{214}}$Bi) & A ($^{\text{208}}$Tl) \\[0.1cm]
                           & [g/cm$^\text{3}$] & [$\mu$Bq/kg]           & [$\mu$Bq/kg] \\[0.1cm]
-\hline
- Se                       & 3.20              & not yet                & not yet \\[0.1cm] 
+%\hline
+% Se                       & 3.20              & not yet                & not yet \\[0.1cm] 
 \hline
 PVA                       & 1.30              & [532;1094] $\pm$ 77 & < 65 \\ [0.1cm]
 \hline
@@ -175,7 +175,7 @@ Mylar backing film        & 1.40              & [618;1637] $\pm$ 106 & [64;229] 
 \subsubsection{MYLAR}
 
 
-\NI The MYLAR design is based on the design developped for the source foil of NEMO-3. In this design, $^{\text{82}}$Se and PVA is mixted together in a paste which is spread as uniform as possible within two mylar films of 12$\mu$m thick and $\sim$2.5~mg/cm$^\text{2}$ of surface density. The evaporation of the water contained in the paste and the drying of the foil is favored by the presence of micro holes in the mylar film. Note that adding the mylar film, which provides a mechanical support, brings additional contamination with respect to the IDEAL case. A schematic view of the foil design is shown in Figure~\ref{MylarDesign}.
+\NI The MYLAR design is based on the design developped for the source foil of NEMO-3. In this design, $^{\text{82}}$Se and PVA is mixed together in a paste which is spread as uniform as possible within two mylar films of 12$\mu$m thick and $\sim$2.5~mg/cm$^\text{2}$ of surface density. The evaporation of the water contained in the paste and the drying of the foil is favored by the presence of micro holes in the mylar film. Note that adding the mylar film, which provides a mechanical support, brings additional contamination with respect to the IDEAL case. A schematic view of the foil design is shown in Figure~\ref{MylarDesign}.
 
 
 \begin{figure}[h!]
@@ -198,7 +198,7 @@ Mylar backing film        & 1.40              & [618;1637] $\pm$ 106 & [64;229] 
 \bigskip
 
 
-\NI To minimise the contamination in $^{\text{208}}$Tl and $^{\text{214}}$Bi coming from the tulle, the lightest fabric available on the market has been chosen, corresponding to a weight of 0.7 mg/cm$^\text{2}$ and was not treated with resins nor paint after weaving. The tulle is ligher than the mylar backing film and gives the advantage of introducing a smaller contamination of $^{\text{208}}$Tl and $^{\text{214}}$Bi which will translate in lower background levels. Nevertheless, in this design, due to the lack of external protection the source foil is directly in contact with the gas in the tracker and is exposed to the risk of $^{\text{82}}$Se losses. In order to avoid this problem the amount of PVA can be increased to improve the foil strength. An increase of the amount of PVA will translate into a higher contamination and a higher thickness of the source foil. 
+\NI To minimise the contamination in $^{\text{208}}$Tl and $^{\text{214}}$Bi coming from the tulle, the lightest fabric available on the market has been chosen, corresponding to a weight of 0.7 mg/cm$^\text{2}$ and was not treated with resins nor paint after weaving. The tulle is lighter than the mylar backing film and gives the advantage of introducing a smaller contamination of $^{\text{208}}$Tl and $^{\text{214}}$Bi which will translate in lower background levels. Nevertheless, in this design, due to the lack of external protection the source foil is directly in contact with the gas in the tracker and is exposed to the risk of $^{\text{82}}$Se losses. In order to avoid this problem the amount of PVA can be increased to improve the foil strength. An increase of the amount of PVA will translate into a higher contamination and a higher thickness of the source foil. 
 
 
 \begin{figure}[h!]
@@ -276,7 +276,7 @@ MYLAR & 1 & 0.053 & 0.068 & 62.0$_\text{b}$ + 111.6$_\text{f}$ & 3.4$_\text{b}$ 
 \subsection{Source foils modelisation}
 
 
-\NI The modelisation of the source foils is realized through rectangular boxes made of $^{\text{82}}$Se, PVA, nylon or mylar depending on from the design under consideration. The composition of the different designs introduced in Section~\ref{sec:designUnderConsideration} are used as well as the parameters summarised in Table~\ref{Tab:SummaryParametersSourceFoilDesign}. The implementation of the material composition is performed by defining the fraction mass for each element, mainly $^{\text{82}}$Se, $^{\text{Nat}}$Se, O, C and N which is found in the nylon mesh.
+\NI The modelisation of the source foils is realized through rectangular boxes made of $^{\text{82}}$Se, PVA, nylon or mylar depending on the design under consideration. The composition of the different designs introduced in Section~\ref{sec:designUnderConsideration} are used with the parameters summarised in Table~\ref{Tab:SummaryParametersSourceFoilDesign}. The implementation of the material composition is performed by defining the fraction mass for each element, mainly $^{\text{82}}$Se, $^{\text{Nat}}$Se, O, C and N which is found in the nylon mesh.
 
 
 \subsection{Event generation}
@@ -364,7 +364,7 @@ MYLAR & & & & \\[0.1cm]
 \end{equation}
 
 
-\NI where N$_\text{A}$ is the Avogadro number, W the atomic mass of the $\beta\beta$ isotope under study, $\epsilon$ is the signal selection efficiency and M $\times$ T the total experimental exposure. The $\mathcal{S}$(b) term represents the average upper limit on the number of signal events that would be obtained by an ensemble of identical replicas of such experiments, each one with the same mean expected background and no true signal. The Feldman \& Cousins unified approach for the definition of the confidence level is adopted. This method optimises the region of interest (R.O.I.) with respect to the sensitivity to the T$_{\text{1/2}}^{\text{0}\nu}$. This optimisation is achieved by maximising the $\epsilon$/S(b) ratio for a given exposure M~$\times$~T.
+\NI where N$_\text{A}$ is the Avogadro number, W the atomic mass of the $\beta\beta$ isotope under study, $\epsilon$ is the signal selection efficiency and M $\times$ T the total experimental exposure. The $\mathcal{S}$(b) term represents the average upper limit on the number of signal events that would be obtained by an ensemble of identical replicas of such experiments, each one with the same mean expected background and no true signal. The Feldman \& Cousins unified approach for the definition of the confidence level is adopted~\cite{FeldmanCousins}. This method optimises the region of interest (R.O.I.) with respect to the sensitivity to the T$_{\text{1/2}}^{\text{0}\nu}$. This optimisation is achieved by maximising the $\epsilon$/S(b) ratio for a given exposure M~$\times$~T.
 
 
 \subsection{Selection efficiency}
@@ -381,7 +381,7 @@ MYLAR & & & & \\[0.1cm]
 \bigskip
 
 
-\NI Figure~\ref{SelectionEfficiency} shows the value of efficiency for the 0$\nu\beta\beta$ signal (red) and background (2$\nu\beta\beta$ in blue, 214 Bi in yellow and 208 Tl in green) when the upper edge of the R.O.I. is kept fixed at 4500~keV while the lower edge is moved from 2000~keV up to 3500~keV. These efficiencies are then used to estimate the expected background level for a given exposure M~$\times$~T following~:
+\NI Figure~\ref{SelectionEfficiency} shows the value of efficiency for the 0$\nu\beta\beta$ signal (red) and background (2$\nu\beta\beta$ in blue, $^{\text{214}}$Bi in orange and $^{\text{208}}$Tl in green) when the upper edge of the R.O.I. is kept fixed at 4500~keV while the lower edge is moved from 2000~keV up to 3500~keV. These efficiencies are then used to estimate the expected background level for a given exposure M~$\times$~T following~:
 
 
 \begin{equation}\label{eq:Nbkg2nu}
@@ -413,7 +413,7 @@ MYLAR & & & & \\[0.1cm]
 \centering
 %\includegraphics[scale=0.25]{pictures/Chap4/SelectionEfficiency.png}
 \includegraphics[scale=0.6]{pictures/Chap4/EffExample.pdf}
-\caption{Selection efficiency for the 0$\nu\beta\beta$ signal (red) and the different backgrounds (2$\nu\beta\beta$ in blue, $^{\text{214}}$Bi in yellow and $^{\text{208}}$Tl in green). The upper edge of the R.O.I is kept fixed at 4500~keV while the lower edge is moved from 2000~keV up to 3500~keV.}
+\caption{Selection efficiency for the 0$\nu\beta\beta$ signal (red) and the different backgrounds (2$\nu\beta\beta$ in blue, $^{\text{214}}$Bi in orange and $^{\text{208}}$Tl in green). The upper edge of the R.O.I is kept fixed at 4500~keV while the lower edge is moved from 2000~keV up to 3500~keV.}
 \label{SelectionEfficiency}
 \end{figure}
 
@@ -423,7 +423,7 @@ MYLAR & & & & \\[0.1cm]
 %\includegraphics[scale=0.25]{pictures/Chap4/ExpectedNumberofEvent.png}
 \includegraphics[scale=0.6]{pictures/Chap4/BkgExample.pdf}
 
-\caption{Expected number of background events (2$\nu\beta\beta$ in blue, $^{\text{214}}$Bi in yellow and $^{\text{208}}$Tl in green) as a function of the low energy edge of the R.O.I. The black points show the sum of all background contributions.}
+\caption{Expected number of background events (2$\nu\beta\beta$ in blue, $^{\text{214}}$Bi in orange and $^{\text{208}}$Tl in green) as a function of the low energy edge of the R.O.I. The black points show the sum of all background contributions.}
 \label{ExpectedNumberofEvent}
 \end{figure}
 
@@ -455,7 +455,7 @@ MYLAR & & & & \\[0.1cm]
 
 \begin{figure}[h!]
 \centering
-\includegraphics[scale=0.45]{pictures/Chap4/FeldmanCousin.pdf}
+\includegraphics[scale=0.5]{pictures/Chap4/FeldmanCousin.pdf}
 \caption{The 90\% C.L. sensitivity curve as a function of the number of background events.}
 \label{FeldmanAndCousin}
 \end{figure}
@@ -472,7 +472,7 @@ MYLAR & & & & \\[0.1cm]
 
 \begin{figure}[h!]
 \centering
-\includegraphics[scale=0.45]{pictures/Chap4/Sens1D.pdf}
+\includegraphics[scale=0.60]{pictures/Chap4/Sens1D.pdf}
 \caption{The 1d sensitivity scan as a function of the low energy edge of the R.O.I.. The high energy edge is kept fixed at 3200 keV. The best sensitivity of 6.1$\times$10$^{\text{24}}$~y is found in [2720; 3200] keV after 21 kg$\times$y exposure, with an
 expected total background contamination of 0.74 $\pm$ 0.06 cts.}
 \label{Sens0nu1D}
@@ -481,7 +481,7 @@ expected total background contamination of 0.74 $\pm$ 0.06 cts.}
 
 \begin{figure}[h!]
 \centering
-\includegraphics[scale=0.45]{pictures/Chap4/sens2D.pdf}
+\includegraphics[scale=0.65]{pictures/Chap4/sens2D.pdf}
 \label{Sens0nu2D.png}
 \caption{The 2d sensitivity scan as a function of the energy edges of the R.O.I.. The best sensitivity of 6.12$\times$10$^{\text{24}}$~y is found in [2720; 3060] keV after 21 kg$\times$y exposure, with an expected total background contamination of 0.72 $\pm$ 0.06 cts.}
 \end{figure}
@@ -613,14 +613,14 @@ R.O.I 2d & [2720 - 3060] & 0.72 $\pm$ 0.06 & 6.12 \\ [0.1cm]
 \section{Source foil design and detector performance}\label{sec:SourceFoilDesignDetectorPerformance}
 
 
-\NI The event simulated and the method developed in Section~\ref{sec:SensStudy} to compute the sensitivity are used in the following sections to study the performance of the SuperNEMO detector. The background level and the sensitivity achievable with the different source foil designs introduced in Section~\ref{sec:SourceFoilDesign} are compared in Section~\ref{sec:RadiopurityVsBkg} and Section~\ref{sec:SensitivityVsDesign} respectively. The amount of PVA glue to mix with $^{\text{82}}$Se during the production of the TULLE design is optimised in order to provide a competitive performance with respect to the alternative MYLAR design in Section\ref{sec:OptimisingAmountPVA}. Finally the effects of a non uniform thickness of the source foil is evaluated in Section~\ref{sec:FoilUniformity} providing a target value for the foil production.
+\NI The events simulated and the method developed in Section~\ref{sec:SensStudy} to compute the sensitivity are used in the following sections to study the performance of the SuperNEMO detector. The background level and the sensitivity achievable with the different source foil designs introduced in Section~\ref{sec:SourceFoilDesign} are compared in Section~\ref{sec:RadiopurityVsBkg} and Section~\ref{sec:SensitivityVsDesign} respectively. The amount of PVA glue to mix with $^{\text{82}}$Se during the production of the TULLE design is optimised in order to provide a competitive performance with respect to the alternative MYLAR design in Section\ref{sec:OptimisingAmountPVA}. Finally the effects of a non uniform thickness of the source foil is evaluated in Section~\ref{sec:FoilUniformity} providing a target value for the foil production.
 
 
 
 \subsection{Radio-purity vs background level}\label{sec:RadiopurityVsBkg}
 
 
-\NI As shown in Table~\ref{Tab:EventSelectionEfficiency} the event selection efficiencies in the 2e channel are different according to the designs. These differences translate into a different background level for a given internal contamination and a given exposure. Assuming an exposure of 21 kg$\times$y the expected level of background in the optimised R.O.I. is computed changing the $^{\text{208}}$Tl and the $^{\text{214}}$Bi activity from 0 $\mu$Bq/kg to 15 $\mu$Bq/kg. The resulting histograms are shown in Figure~\ref{Nbkg_3designsTl208Bi214}. Note that for the MYLAR design, each value of activity is equally shared among the p.d.f. of the bulk and the backing film. If all the activity is given to the bulk p.d.f. only, the background increases by 10. At the target radio-purity level of 2 $\mu$Bq/kg in $^{\text{208}}$Tl and 10 $\mu$Bq/kg in $^{\text{214}}$Bi the expected background coming from the internal contamination is 0.15 counts for TULLE and MYLAR designs. Figure~\ref{Nbkg_3designs} shows the expected number adding the contribution of the 2$\nu\beta\beta$. Compatible background levels are found as a function of the $^{\text{208}}$Tl and the $^{\text{214}}$Bi activities among the source foil designs.
+\NI As shown in Table~\ref{Tab:EventSelectionEfficiency} the event selection efficiencies in the 2e channel are different according to the designs. These differences translate into a different background level for a given internal contamination and a given exposure. Assuming an exposure of 21 kg$\times$y the expected level of background in the optimised R.O.I. is computed changing the $^{\text{208}}$Tl and the $^{\text{214}}$Bi activity from 0 $\mu$Bq/kg to 15 $\mu$Bq/kg. The resulting histograms are shown in Figure~\ref{Nbkg_3designs}. Note that for the MYLAR design, each value of activity is equally shared among the p.d.f. of the bulk and the backing film. If all the activity is given to the bulk p.d.f. only, the background increases by 10. At the target radio-purity level of 2 $\mu$Bq/kg in $^{\text{208}}$Tl and 10 $\mu$Bq/kg in $^{\text{214}}$Bi the expected background coming from the internal contamination is 0.15 counts for TULLE and MYLAR designs. Figure~\ref{Nbkg_3designsTl208Bi214} shows the expected number adding the contribution of the 2$\nu\beta\beta$. Compatible background levels are found as a function of the $^{\text{208}}$Tl and the $^{\text{214}}$Bi activities among the source foil designs.
 
 
 \begin{figure}[h!]
@@ -628,8 +628,8 @@ R.O.I 2d & [2720 - 3060] & 0.72 $\pm$ 0.06 & 6.12 \\ [0.1cm]
 \includegraphics[scale=0.5]{pictures/Chap4/MYLAR_no2nu.pdf}
 \includegraphics[scale=0.5]{pictures/Chap4/TULLE_no2nu.pdf}
 \includegraphics[scale=0.5]{pictures/Chap4/IDEAL_no2nu.pdf}
+\caption{Expected number of $^{\text{208}}$Tl and $^{\text{214}}$Bi background events as a function of their activity in the source foil for an exposure of 21 kg $\times$ y as expected for the SuperNEMO demonstrator. Top: MYLAR. Center: TULLE. Bottom: IDEAL}
 \label{Nbkg_3designs}
-\caption{Expected number of total (2$\nu\beta\beta$ + $^{\text{208}}$Tl + $^{\text{214}}$Bi) background events as a function of the $^{\text{208}}$Tl and the $^{\text{214}}$Bi activity in the source foil for an exposure of 21 kg$\times$y. Top: MYLAR. Center: TULLE. Bottom: IDEAL}
 \end{figure}
 
 
@@ -638,8 +638,8 @@ R.O.I 2d & [2720 - 3060] & 0.72 $\pm$ 0.06 & 6.12 \\ [0.1cm]
 \includegraphics[scale=0.5]{pictures/Chap4/MYLAR_all.pdf}
 \includegraphics[scale=0.5]{pictures/Chap4/TULLE_all.pdf}
 \includegraphics[scale=0.5]{pictures/Chap4/IDEAL_all.pdf}
+\caption{Expected number of total (2$\nu\beta\beta$ + $^{\text{208}}$Tl + $^{\text{214}}$Bi) background events as a function of the $^{\text{208}}$Tl and the $^{\text{214}}$Bi activity in the source foil for an exposure of 21 kg$\times$y. Top: MYLAR. Center: TULLE. Bottom: IDEAL}
 \label{Nbkg_3designsTl208Bi214}
-\caption{Expected number of $^{\text{208}}$Tl and $^{\text{214}}$Bi background events as a function of their activity in the source foil for an exposure of 21 kg $\times$ y as expected for the SuperNEMO demonstrator. Top: MYLAR. Center: TULLE. Bottom: IDEAL}
 \end{figure}
 
 
@@ -672,28 +672,24 @@ MYLAR           & [2720 ; 3000] & 16.44 $\pm$ 0.04 & 2.1 $\pm$ 0.1 & 4.50 \\  [0
 \end{table}
 
 
-\begin{figure}[h!]
-\centering
-\includegraphics[scale=0.7]{pictures/Chap4/Sensitivity3Designs.pdf}
-\caption{SuperNEMO demonstrator sensitivity for different source foil designs. Top: IDEAL. Center: TULLE. Bottom: MYLAR}
-\label{Sens2D-3designs}
-\end{figure}
-
-
-\bigskip
-
-
-\NI As discussed in Section~\ref{sec:EventsEnergyDistribution} the design of the source foil does not have a strong impact on the shape of the signal and background energy distributions. Nevertheless, the different activities of the material considered for the foil production and their mass fraction with respect to the $^{\text{82}}$Se affect in a non negligible way the performance of SuperNEMO. The performances obtained with the TULLE and MYLAR designs are compatible within~3\% but descrease  by approximately 16\% compared to the IDEAL design. Figure~\ref{SensVsExposure3Designs} shows the extrapolation of the SuperNEMO sensitivity beyond the exposure expected for the demonstrator module, up to 1000 kg$\times$y.
+\NI As discussed in Section~\ref{sec:EventsEnergyDistribution} the design of the source foil does not have a strong impact on the shape of the signal and background energy distributions. Nevertheless, the different activities of the material considered for the foil production and their mass fraction with respect to the $^{\text{82}}$Se affect in a non negligible way the performance of SuperNEMO. The performances obtained with the TULLE and MYLAR designs are compatible within~3\% but decreases  by approximately 16\% compared to the IDEAL design. Figure~\ref{SensVsExposure3Designs} shows the extrapolation of the SuperNEMO sensitivity beyond the exposure expected for the demonstrator module, up to 1000 kg$\times$y.
 
 
 \begin{figure}[h!]
 \centering
-\includegraphics[scale=0.75]{pictures/Chap4/SensVsExposure.pdf}
-
+\includegraphics[scale=0.55]{pictures/Chap4/SensVsExposure.pdf}
 \caption{SuperNEMO 0$\nu\beta\beta$ half-life limit at 90\% C.L. as a function of the exposure for the different source foil designs. The dotted line refers to the IDEAL design of the foil in which the backgrounds are normalised to the target radio-purity level of SuperNEMO.}
 \label{SensVsExposure3Designs}
 \end{figure}
 
+
+
+\begin{figure}[h!]
+\centering
+\includegraphics[scale=0.65]{pictures/Chap4/Sensitivity3Designs.pdf}
+\caption{SuperNEMO demonstrator sensitivity for different source foil designs. Top: IDEAL. Center: TULLE. Bottom: MYLAR}
+\label{Sens2D-3designs}
+\end{figure}
 
 
 
@@ -735,7 +731,7 @@ MYLAR           & [2720 ; 3000] & 16.44 $\pm$ 0.04 & 2.1 $\pm$ 0.1 & 4.50 \\  [0
 \end{figure}
 
 
-\begin{table}
+\begin{table}[h!]
 \centering
 \begin{tabular}{c|c|c|c|c|c|c|c}
 \toprule 
@@ -758,7 +754,7 @@ f$_{\text{Se}}$ & f$_{\text{PVA}}$ & f$_{\text{Support}}$ & a & $\rho$ & t & A (
 \end{table}
 
 
-\begin{table}
+\begin{table}[h!]
 \centering
 \begin{tabular}{c|c|c|c|c}
 \toprule
@@ -792,7 +788,7 @@ f$_{\text{PVA}}$ & R.O.I [keV] & $\epsilon_{\text{0}\nu}$ [\%] & bkg. [cts.] &  
 \subsubsection{Signal and background vs foil thickness}
 
 
-\NI Signal and background events have been simulated considering a TULLE foil design containing 90\% of $^{\text{82}}$Se and 10\% of PVA. The reference thickness of 190~$\mu$m has been varied by $\pm$10\% and $\pm$20\%. For each foil thickness, the simulated sample consists of 10$^\text{6}$ 0$\nu\beta\beta$ events and 10$^\text{7}$ events for each background channel, 2$\nu\beta\beta$ , $^{\text{208}}$Tl and $^{\text{214}}$Bi. The expected energy spectra of the 2e channel are shown in Figure~\ref{ThicknessSourceFoil} for the different thicknesses. It clearly appears looking at the 0$\nu\beta\beta$ (top left) and the 2$\nu\beta\beta$ (top right) spectra of Figure~\ref{ThicknessSourceFoil} that the overall effect is a worsening of the energy resolution (increasing of the 0$\nu\beta\beta$ peak width) and a shift of the events towards lower energies due to an increase of the energy lost within the foil. Table~\ref{tab:SignalBkgDifferentThickness} summarises the impact of the source foil thickness on the selection efficiency for the signal and the backgrounds. The selection efficiency being defined as the fraction of events satisfying the simple selection criteria of two reconstructed negative tracks hitting two calo blocks with a total energy deposition in [2700; 3000] MeV, defined as the ROI maximising the sensitivity to T$_{\text{1/2}}$. The total background level and the best sensitivity obtained in the ROI are summarised in Table~\ref{Tab:ThicknessInfluence}.
+\NI Signal and background events have been simulated considering a TULLE foil design containing 90\% of $^{\text{82}}$Se and 10\% of PVA. The reference thickness of 190~$\mu$m has been varied by $\pm$10\% and $\pm$20\%. For each foil thickness, the simulated sample consists of 10$^\text{6}$ 0$\nu\beta\beta$ events and 10$^\text{7}$ events for each background channel, 2$\nu\beta\beta$ , $^{\text{208}}$Tl and $^{\text{214}}$Bi. The expected energy spectra of the 2e channel are shown in Figure~\ref{ThicknessSourceFoil} for the different thicknesses. It appears clearly from the 0$\nu\beta\beta$ (top left) and the 2$\nu\beta\beta$ (top right) spectra of Figure~\ref{ThicknessSourceFoil} that the overall effect is a worsening of the energy resolution (increasing of the 0$\nu\beta\beta$ peak width) and a shift of the events towards lower energies due to an increase of the energy lost within the foil. Table~\ref{tab:SignalBkgDifferentThickness} summarises the impact of the source foil thickness on the selection efficiency for the signal and the backgrounds. The selection efficiency being defined as the fraction of events satisfying the simple selection criteria of two reconstructed negative tracks hitting two calo blocks with a total energy deposition in [2700; 3000] MeV, defined as the ROI maximising the sensitivity to T$_{\text{1/2}}$. The total background level and the best sensitivity obtained in the ROI are summarised in Table~\ref{Tab:ThicknessInfluence}.
 
 
 
@@ -814,7 +810,7 @@ t & Density & $\epsilon_{\text{0}\nu}$ & $\epsilon_{\text{2}\nu}$ & $\epsilon_{\
 230 & 68.5 & 14.95 $\pm$ 0.04 & 4.00 $\pm$ 0.04 & 3.1 $\pm$ 0.2 & 1.4 $\pm$ 0.1 \\
 \bottomrule
 \end{tabular}
-\caption{Signal and background efficiencies for E$_\beta\beta$ in [2700; 3000] keV.}
+\caption{Signal and background efficiencies for E$_{\beta\beta}$ in [2700; 3000] keV.}
 \label{tab:SignalBkgDifferentThickness}
 \end{table}
 
@@ -896,7 +892,7 @@ $\pm$20\% & 2.8 & 6.0 & 3.4 & 4.2 & 3.3 \\[0.1cm]
 \end{table}
 
 
-\NI  The effect of the thickness uniformity on the 0$\nu\beta\beta$ sample is < 3\% while for 2$\nu\beta\beta$ it increases up to 6\%. For the other internal backgrounds, the effect is < 8\%. The overall effect on the sensitivity is < 3\%. Assuming the systematic uncertainty on the signal and background efficiencies of 7\% and 10\% respectively~\cite{NEMO3:Mo100} as the upper limit for the SuperNEMO demonstrator module, it is recommendable to aim for an uniformity <20\% over the whole foil surface. The effect of a $\pm$20\% uniformity remains in fact within the expected systematic uncertainties.% In any case, it must be kept into account that the uniformity effects highlighted in this work could be reduced and perhaps neglected through a precise knowledge of the foil average thickness and a thickness map. Such a knowledge could be easily obtained through a dedicated measurement campaign (5\% at 200 $\mu$m) and then introduced in the geometry model of the SuperNEMO simulation software.
+\NI  The effect of the thickness uniformity on the 0$\nu\beta\beta$ sample is~<~3\% while for 2$\nu\beta\beta$ it increases up to 6\%. For the other internal backgrounds, the effect is~<~8\%. The overall effect on the sensitivity is~<~3\%. Assuming the systematic uncertainty on the signal and background efficiencies of 7\% and 10\% respectively~\cite{NEMO3:Mo100} as the upper limit for the SuperNEMO demonstrator module, it is recommendable to aim for an uniformity~<~20\% over the whole foil surface. The effect of a $\pm$20\% uniformity remains in fact within the expected systematic uncertainties. % In any case, it must be kept into account that the uniformity effects highlighted in this work could be reduced and perhaps neglected through a precise knowledge of the foil average thickness and a thickness map. Such a knowledge could be easily obtained through a dedicated measurement campaign (5\% at 200 $\mu$m) and then introduced in the geometry model of the SuperNEMO simulation software.
 
 
 \FloatBarrier
@@ -911,7 +907,7 @@ $\pm$20\% & 2.8 & 6.0 & 3.4 & 4.2 & 3.3 \\[0.1cm]
 \bigskip
 
 
-\NI After a R\&D program and despite its good performances in terms of radiopurity, the TULLE design has been abandoned. As in this design the $^{\text{82}}$Se + PVA is not protected with a mylar film, the foil will be directly in contact with the tracker gas. Ageing tests have been realized at LAPP and shown a deterioration of the foil when placing it in a similar environment to the tracker. Based on the experience of the R\&D program, an alternative design has been proposed consisting of spreading the $^{\text{82}}$Se + PVA paste on a delrin mold. Once the preparation is dry, the stand alone foil is inserted into a raw mylar pocket which is then welded. The raw mylar film has the advantage to provide a protection against the tracker gas, and has a better radiopurity compared to the mylar backing film, since no holes have been made in the film. The sensitivity reachable with this new design is compared to the IDEAL and MYLAR (MYLAR backing film) as shown in Figure~\ref{RawMylarDesignComparison}. This design has at least similar performances than the design using a mylar backing film.
+\NI After a R\&D program and despite its good performances in terms of radiopurity, the TULLE design has been abandoned. As in this design the $^{\text{82}}$Se + PVA is not protected with a mylar film, the foil will be directly in contact with the tracker gas. Ageing tests have been realized at LAPP and have shown a deterioration of the foil when placing it in a similar environment to the tracker. Based on the experience of the R\&D program, an alternative design has been proposed consisting of spreading the $^{\text{82}}$Se + PVA paste on a delrin mold. Once the preparation is dry, the stand alone foil is inserted into a raw mylar pocket which is then welded. The raw mylar film has the advantage to provide a protection against the tracker gas, and has a better radiopurity compared to the mylar backing film, since no holes have been made in the film. The sensitivity reachable with this new design is compared to the IDEAL and MYLAR (MYLAR backing film) as shown in Figure~\ref{RawMylarDesignComparison}. This design has a slightly better performance than the design using a mylar backing film. Note that the previous results on foil optimisation and uniformity stay valid for this design. It has been chosen for producing half of the foils for the demonstrator.
  
 
 %\NI The Falaise legacy software used in this work for the event simulation has not been fully validated here. A qualitative comparison with older studies shows however that the results are compatible. Anyway, the optimisation of the source foil design does not require an absolute validation of the simulation code as far as a relative comparison among the different designs is considered. 
@@ -923,7 +919,7 @@ $\pm$20\% & 2.8 & 6.0 & 3.4 & 4.2 & 3.3 \\[0.1cm]
 
 \begin{figure}[h!]
 \centering
-\includegraphics[scale=0.6]{pictures/Chap4/rawMylar.pdf}
+\includegraphics[scale=0.7]{pictures/Chap4/rawMylar.pdf}
 \caption{SuperNEMO 0$\nu\beta\beta$ half-life limit at 90\% C.L. as a function of the exposure for the IDEAL, MYLAR backing film and raw MYLAR designs.}
 \label{RawMylarDesignComparison}
 \end{figure}
